--- a/SENAC_TEST/MainPage.xaml
+++ b/SENAC_TEST/MainPage.xaml
@@ -25,8 +25,25 @@
             <Button Grid.Row="0" Grid.Column="2" Clicked="OnButtonClicked"/>
             <Button Grid.Row="1" Grid.Column="2" Clicked="OnButtonClicked"/>
             <Button Grid.Row="2" Grid.Column="2" Clicked="OnButtonClicked"/>
-        </Grid>
-        
+
+            <Grid.Triggers>
+                <DataTrigger TargetType="Grid" Binding="{Binding Width}" Value="Wide" >
+                    <Setter Property="RowDefinitions">
+                        <RowDefinitionCollection>
+                            <!-- Defina as linhas para layout horizontal aqui -->
+                        </RowDefinitionCollection>
+                    </Setter>
+                    <Setter Property="ColumnDefinitions">
+                        <ColumnDefinitionCollection>
+                            <!-- Defina as colunas para layout horizontal aqui -->
+                        </ColumnDefinitionCollection>
+                    </Setter>
+                    <!-- Outros setters para reposicionar botões se necessário -->
+                </DataTrigger>
+
+                <!-- Você pode adicionar mais triggers para diferentes condições -->
+            </Grid.Triggers>
+        </Grid>        
     </VerticalStackLayout>
 
 </ContentPage>
