--- a/SENAC_TEST/MainPage.xaml
+++ b/SENAC_TEST/MainPage.xaml
@@ -16,33 +16,17 @@
                 <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Row="0" Grid.Column="0" Clicked="OnButtonClicked"/>
-            <Button Grid.Row="1" Grid.Column="0" Clicked="OnButtonClicked"/>
-            <Button Grid.Row="2" Grid.Column="0" Clicked="OnButtonClicked"/>
-            <Button Grid.Row="0" Grid.Column="1" Clicked="OnButtonClicked"/>
-            <Button Grid.Row="1" Grid.Column="1" Clicked="OnButtonClicked"/>
-            <Button Grid.Row="2" Grid.Column="1" Clicked="OnButtonClicked"/>
-            <Button Grid.Row="0" Grid.Column="2" Clicked="OnButtonClicked"/>
-            <Button Grid.Row="1" Grid.Column="2" Clicked="OnButtonClicked"/>
-            <Button Grid.Row="2" Grid.Column="2" Clicked="OnButtonClicked"/>
+            <Button Grid.Row="0" Grid.Column="0" Clicked="OnButtonClicked" Padding="2,2,2,2" Margin="2,2,2,2"/>
+            <Button Grid.Row="1" Grid.Column="0" Clicked="OnButtonClicked" Margin="2,2,2,2"/>
+            <Button Grid.Row="2" Grid.Column="0" Clicked="OnButtonClicked" Margin="2,2,2,2"/>
+            <Button Grid.Row="0" Grid.Column="1" Clicked="OnButtonClicked" Margin="2,2,2,2"/>
+            <Button Grid.Row="1" Grid.Column="1" Clicked="OnButtonClicked" Margin="2,2,2,2"/>
+            <Button Grid.Row="2" Grid.Column="1" Clicked="OnButtonClicked" Margin="2,2,2,2"/>
+            <Button Grid.Row="0" Grid.Column="2" Clicked="OnButtonClicked" Margin="2,2,2,2"/>
+            <Button Grid.Row="1" Grid.Column="2" Clicked="OnButtonClicked" Margin="2,2,2,2"/>
+            <Button Grid.Row="2" Grid.Column="2" Clicked="OnButtonClicked" Margin="2,2,2,2"/>
 
-            <Grid.Triggers>
-                <DataTrigger TargetType="Grid" Binding="{Binding Width}" Value="Wide" >
-                    <Setter Property="RowDefinitions">
-                        <RowDefinitionCollection>
-                            <!-- Defina as linhas para layout horizontal aqui -->
-                        </RowDefinitionCollection>
-                    </Setter>
-                    <Setter Property="ColumnDefinitions">
-                        <ColumnDefinitionCollection>
-                            <!-- Defina as colunas para layout horizontal aqui -->
-                        </ColumnDefinitionCollection>
-                    </Setter>
-                    <!-- Outros setters para reposicionar botões se necessário -->
-                </DataTrigger>
-
-                <!-- Você pode adicionar mais triggers para diferentes condições -->
-            </Grid.Triggers>
+            
         </Grid>        
     </VerticalStackLayout>
 
